--- a/src/main/webapp/static/styles/w_default.css
+++ b/src/main/webapp/static/styles/w_default.css
@@ -183,17 +183,17 @@ img {
 	float: left;
 	height:11px;
 	width: 964px;
-	background: url("/upload_dir/themes/web/BUKH/graphics/content_top.png") no-repeat top left;
+	background: url("../images/content_top.png") no-repeat top left;
 }
 #Content {	
 	float:left;
 	margin:0 auto;
 	padding:0px 2px 10px 2px;
-	background: url("/upload_dir/themes/web/BUKH/graphics/content_background.png") repeat-y top left;
+	background: url("../images/content_background.png") repeat-y top left;
 }
 	
 	#Content #MainContentFrontpage {
-		background: url("/upload_dir/themes/web/BUKH/graphics/bukh_frontpage_bg.png") repeat-y top left;
+		background: url("../images/bukh_frontpage_bg.png") repeat-y top left;
 	}
 	#WorldMap {
 		border-bottom: 1px solid #f3f3f3;
@@ -238,7 +238,7 @@ img {
 	float: left;
 	height:32px;
 	width: 964px;
-	background: url("/upload_dir/themes/web/BUKH/graphics/content_bottom.png") no-repeat top left;
+	background: url("../images/content_bottom.png") no-repeat top left;
 }
 .bodyPageId1 #ContentTop,
 .bodyPageId1 #Content,
@@ -287,7 +287,7 @@ img {
 		margin:0 0px 0 0;
 		float: right;
 		display:inline;
-		background: url("/upload_dir/themes/web/BUKH/graphics/right-collumn_background.png") no-repeat top left;
+		background: url("../images/right-collumn_background.png") no-repeat top left;
 	}
 		.pagecontent-box {
 			width: 200px;
@@ -457,7 +457,7 @@ img {
 			width: 970px;
 		}
 		.FrontpageTeaserContent {
-			background: url("/upload_dir/pics/forside/bukh_frontpage_content.png") repeat-y top left;
+			background: url("../images/bukh_frontpage_content.png") repeat-y top left;
 			float: left;
 		}
 	.bodyPageId1 #MainContent {
@@ -538,7 +538,7 @@ img {
 		font-size: 10px;
 	}
 	#FooterMap {
-		background: url("/upload_dir/themes/web/BUKH/graphics/footer-map.png") no-repeat top right;
+		background: url("../images/footer-map.png") no-repeat top right;
 		height: 50px;
     	width: 220px;
     	float: right;
